[chromium] WebViewBenchmarkSupport::paint API does not work with recording canvas https://bugs.webkit.org/show_bug.cgi?id=92008

Reviewed by Darin Fisher.

Moved the ownership of canvas to WebViewBenchmarkSupport::PaintClient.

* public/WebViewBenchmarkSupport.h:
(PaintClient):
(WebKit::WebViewBenchmarkSupport::PaintClient::willPaint):
(WebKit::WebViewBenchmarkSupport::PaintClient::didPaint):
* src/WebViewBenchmarkSupportImpl.cpp:
(WebKit::WebViewBenchmarkSupportImpl::paintLayer):
(WebKit::WebViewBenchmarkSupportImpl::softwarePaint):


Canonical link: https://commits.webkit.org/110085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123645 268f45cc-cd09-0410-ab3c-d52691b4dbfc